fixed navbar spacing issues on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+body{
+  margin: 0;
+}
+
 @media (max-width: 800px) {
   .AppGrid {
     overflow-x: hidden; 
