--- a/src/css/NavBar.scss
+++ b/src/css/NavBar.scss
@@ -78,9 +78,12 @@ body {
 
 .navbar{
     position: relative;
-    display: flex;
     flex-direction: row;
-    justify-content: center;
+    display: -webkit-flex;
+    display: flex;
+    flex: 1;
+    -webkit-justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
     max-height: 7vh;
     min-height: 7vh;
@@ -88,17 +91,30 @@ body {
     max-width: 100vw;
     z-index: 10;
     background-color: '#000';
+    margin-left: 0;
   }
   .navbar button{
-    font-size: 2em;
-    left: 0;
-    margin-left: 1em;
-    position: absolute;
+    font-size: 30px;
     background-color: transparent;
     border-radius: 25;
     outline: transparent;
     border: transparent;
     cursor: pointer;
+  }
+  .hidden{
+    opacity: 0;
+    pointer-events: none;
+  }
+  .navbar h1{
+    font-size: 2em;
+  }
+  .flex-hidden-item-nav{
+    opacity: 0;
+    min-width: 30px;
+  }  
+  .flex-hidden-item-side{
+    opacity: 0;
+    min-width: 15px;
   }
   .sidebar-container{
       top:0;
@@ -121,28 +137,35 @@ body {
       box-shadow: 5px 5px 15px 5px #000000;
   }
   .sidebar-header{
-    margin-top: 1.5em;
+    text-align: center;
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-    color: white
+    color: white;
+    min-width: 100%;
   }
   .sidebar-items{
+    text-justify: auto;
+    text-align: center;
     margin-top: 2em;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     font-size: 1.2em;
+    max-width: 100%;
   }
   .menu-close-button{
     margin-top: 0;
+    margin-left: 0;
+    font-size: 30px;
     color: white
   }
   .menu-title{
     margin-top: 0;
-    font-size: 2em;
+    font-size: 30px;
     text-decoration: underline;
   }
   @media (max-width: 800px) {
@@ -150,14 +173,19 @@ body {
         max-width: 70vw;
         min-width: 70vw;
       }
+      .navbar h1{
+        margin-left: 0;
+        margin-right: 0;
+        font-size: 20px;
+      }
       .navbar button{
-        margin-left: 0.2em;
+        margin-left: 10px;
       }
       .sidebar-header{
         margin-top: 1em;
       }
       .menu-title{
-        font-size: 1.2em;
+        font-size: 20px;
         margin-top: 0.6em;
       }
       .sidebar-items{
@@ -166,4 +194,12 @@ body {
       .social-container {
         font-size: 1em;
       }
+      .menu-close-button{
+        font-size: 0.5em;
+        color: white
+      }
+      .flex-hidden-item-nav{
+        opacity: 0;
+        min-width: 30px;
+      }  
   }
